css/style.css
body{
    font-family: Montserrat;

    background-color: #8AB9EB;
    color: #292B2E;
}

h1, h2, h3, h4, h5, h6 {
    font-family: Barlow;
    font-size:40pt;
    color: #292B2E;
    text-align:center;
}

header{
    border: 5px solid #292B2E;
    background-color: #C6B597;
    text-align: center;

}

header img{
    width: 10em;
    height: 10em;
    box-shadow:8px 8px 8px rgba(0,0,0,.5);
    border: solid #73B4FA;
}

#Hero, footer{
    color: #292B2E;
    border: 5px solid #292B2E;
    background-color: #C6B597;
    text-align:center;
    padding:10px;
    margin: 5em;
    margin-left: 40em;
    margin-right: 40em;
}

/* Hero Section */

#Hero img{
    width:15em;
    padding:.15em;
    background-image:-moz-repeating-radial-gradient(#C6B597, #292B2E);
    box-shadow:8px 8px 8px rgba(0,0,0,.5);
    border: solid #73B4FA;
}

/* About Us Section */
#AboutUs {
    border: 5px solid #292B2E;
    background-color: #C6B597;
    text-align:center;
    padding: 1em;
    margin: 5em;
}

/* Services Section */

#Services {
    border: 5px solid #292B2E;
    background-color: #C6B597;
    text-align:center;
    padding: 1em;
    margin: 2em;
    margin-bottom: 3rem;
}

#Services img{
    box-shadow:8px 8px 8px rgba(0,0,0,.5);
    max-width: 75%;
    max-height: 75%;
    background-color:#C6B597;
    border: 5px solid #73B4FA;
}

/* Testimonials Section */

#Testimonials{
    border: 5px solid #292B2E;
    background-color: #C6B597;
    text-align:center;
    padding: 1em;
    margin: 5em;
}

#Testimonials h3{
    font-size: 2rem;
}

/* Mobile/Tablet */
@media screen and (min-width: 50em){
    figure{
            display: grid;
            grid-template-columns: 1fr 2fr;
    }

    figcaption{
        display:flex;
        justify-content: center;
        align-items: center;
        font-size: 2rem;
        margin: 1rem;
    }

    figure img{
        width: 50%;
    }

    article{
        background-image:-moz-repeating-radial-gradient(#D9B16C, #C6B597);
        border: 5px solid #292B2E;
        margin: 1em;
    }

}

/* Desktop */
@media screen and (min-width: 100em){
    #Testimonials {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }

    hr {
        display: none;
    }

    #Testimonials h2{
        grid-column: 1/-1;
    }

    figure {
        display: block;
    }

    figure img{
        width: 25%;
    }
}

